RESOLVED FIXED300153
[iOS] Cannot scroll on gemini.google.com after sending message
https://bugs.webkit.org/show_bug.cgi?id=300153
Summary [iOS] Cannot scroll on gemini.google.com after sending message
Lily Spiniolas
Reported 2025-10-03 17:17:41 PDT
Attachments
Lily Spiniolas
Comment 1 2025-10-03 18:03:41 PDT
EWS
Comment 2 2025-10-07 13:53:33 PDT
Committed 301162@main (081f5360d06e): <https://commits.webkit.org/301162@main> Reviewed commits have been landed. Closing PR #51793 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.