Tools/TestRunnerShared/UIScriptContext/UIScriptController.h
@@ -275,6 +275,7 @@ public:
     virtual void setHardwareKeyboardAttached(bool) { }
 
     virtual void setKeyboardInputModeIdentifier(JSStringRef) { notImplemented(); }
+    virtual void setFocusStartsInputSessionPolicy(JSStringRef) { notImplemented(); }
 
     virtual void replaceTextAtRange(JSStringRef, int, int) { notImplemented(); }
 
